--- a/styles/modules-right/_modulesRight.scss
+++ b/styles/modules-right/_modulesRight.scss
@@ -4,9 +4,9 @@ modules-right-container {
   background-color: $base-transparent;
   border: 2px solid $surface1-transparent;
   border-radius: $border-radius;
-  min-width: 500px;
-  min-height: 840px;
-  padding: 40px;
+  min-height: 800px;
+  padding: 20px;
+  
 }
 
 app-launcher-background-right {
@@ -17,9 +17,7 @@ app-launcher-background-right {
 
 system-info-pill-container {
   background-color: $mantle-transparent;
-  border: 1px solid $surface0-transparent;
+  border: 1px solid $surface0;
   border-radius: $border-radius;
-  margin: 0px;
-  margin-bottom: 0px;
   padding: 20px;
 }
