--- a/styles/modules-right/_pillWidgets.scss
+++ b/styles/modules-right/_pillWidgets.scss
@@ -2,8 +2,8 @@
 
 pill-container {
   background: none;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 pill-button {
@@ -12,10 +12,10 @@ pill-button {
   border-radius: 99px;
   box-shadow: inset 0 -1px 0 0 $base, 0 4px 6px rgba(0, 0, 0, 0.5);
   transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1);
-  min-width: 220px;
-  min-height: 60px;
-  margin-left: 10px;
-  margin-right: 10px;
+  min-width: 170px;
+  min-height: 30px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 pill-button>button {
@@ -30,18 +30,18 @@ pill-button:hover {
 pill-button-image {
   color: $accent-background;
   background-color: transparent;
-  -gtk-icon-size: 26px;
+  -gtk-icon-size: 25px;
   margin: 10px;
 }
 
 pill-button-name {
   background-color: transparent;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 pill-button-detail {
   background-color: transparent;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 300;
 }
 
@@ -63,12 +63,12 @@ pill-popover-container {
 }
 
 pill-popover-details-area-container {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding: 20px;
   background-color: $mantle;
   border-radius: $border-radius;
-  border: 2px solid $base;
+  border: 1px solid $base;
 }
 
 pill-popover-details-header {
